# garbled-snark-verifier

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP_PAIRING.md  aes.md  build.rs  file.txt  gates_monitor.py  log  rust-project.json
.cargo/: config.toml
.claude/agents/: rust-snark-garbled-circuit.md
.github/workflows/: build_and_test.yml  checks.yml  gate-count-badges.yml
.scripts/: gates_monitor.py
badge_data/: free.json  nonfree.json  total.json
circuit_component_macro/: Cargo.toml  README.md
circuit_component_macro/src/: gen_bn_wrapper.rs  gen_wrapper.rs  lib.rs  parse_sig.rs
circuit_component_macro/tests/: integration.rs
circuit_component_macro/tests/fail/: no_inputs.rs  self_parameter.rs  too_many_inputs.rs
circuit_component_macro/tests/success/: ignore_keeps_order.rs  one_input.rs  sixteen_inputs.rs  three_inputs.rs  two_inputs.rs
crates/circuit_component_macro/: README.md
crates/soldering-core/: Cargo.toml  build.rs
crates/soldering-core/guest/: Cargo.toml
crates/soldering-core/guest/src/: main.rs
crates/soldering-core/src/: common.rs  guest.rs  host.rs  lib.rs  types.rs
crates/soldering-program/: Cargo.toml  SoW.md
crates/soldering-program/program/: Cargo.toml
crates/soldering-program/program/src/: main.rs
crates/soldering-program/script/: Cargo.toml
crates/soldering-program/types/: Cargo.toml
crates/soldering-program/types/src/: lib.rs
crates/soldering-zk-circuit/: Cargo.toml  README.md  SoW.md
crates/soldering-zk-circuit/src/: lib.rs
examples/: fq_inverse_many.rs  g1_multiplexer_flame.rs  groth16_basic_multigarble.rs  groth16_basic_multigarbling.rs  groth16_cc_eval_only.rs  groth16_cut_and_choose.rs  groth16_cut_and_choose_without_soldering.rs  groth16_g2e.rs  groth16_garble.rs  groth16_garble_multi.rs  groth16_garble_with_compress.rs  groth16_gc_gate_count.rs  groth16_mpc.rs  groth16_multi_181.rs  groth16_multigarble_181.rs  groth16_multithread_multigarbling.rs  groth16_write_read_conistency.rs  pairing_gate_counts.rs  soldering_e2e.rs  vsss_full_flow.rs
sp1-soldering-program/: Cargo.toml
sp1-soldering-program/src/: main.rs  types.rs
src/: ciphertext_hasher.rs  cut_and_choose.rs  garbled_groth16.rs  groth16_cut_and_choose.rs  groth16_proof_api.rs  hashers.rs  hw.rs  lib.rs  logging.rs  sp1_soldering.rs  storage.rs
src/cac/: adaptor_sigs.rs  mod.rs  vsss.rs  vsss_checker.rs
src/circuit/: ciphertext_file_handler.rs  ciphertext_source.rs  circuit_context.rs  commitment.rs  component_meta.rs  evaluation.rs  finalized.rs  garble_integration_test.rs  garbling.rs  mod.rs  modes.rs  playground.rs  streaming_mode.rs  structure.rs  test.rs
src/circuit/modes/: evaluate_mode.rs  execute_mode.rs  garble_mode.rs  multigarble_mode.rs
src/circuit/modes/evaluate_mode/: evaluate_test.rs
src/circuit/modes/garble_mode/: garble_test.rs  halfgates_garbling.rs
src/circuit/playground/: into_wire_list.rs  test_macro.rs
src/circuit/streaming/: arity_tests.rs  cache.rs  circuit_context_trait.rs  component_key.rs  component_meta.rs  component_template_pool.rs  components.rs  garble_evaluate_integration_test.rs  garble_integration_test.rs  into_wire_list.rs  mod.rs  modes.rs  streaming_mode.rs  test_macro.rs
src/circuit/streaming/modes/: evaluate.rs  evaluate_mode.rs  evaluate_test.rs  execute.rs  execute_mode.rs  execute_with_credits.rs  garble.rs  garble_mode.rs  garble_test.rs  streaming_mode.rs
src/circuit/streaming/modes/evaluate_mode/: evaluate_test.rs
src/circuits/: basic.rs  groth16.rs
src/circuits/bigint/: add.rs  cmp.rs  mul.rs  utils.rs
src/circuits/bn254/: finalexp.rs  fp254impl.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  g1.rs  g2.rs  pairing.rs
src/core/: bristol.rs  circuit.rs  delta.rs  gate.rs  mod.rs  progress.rs  s.rs  wire.rs
src/core/gate/: garbling.rs  mod.rs  tests.rs
src/core/gate/garbling/: aes_ni.rs  aes_ni_test.rs  hashers.rs  mod.rs  tests.rs
src/cut_and_choose/: ciphertext_repository.rs  evaluator.rs  garbler.rs  groth16.rs  mod.rs  tests.rs
src/cut_and_choose/soldering/: mod.rs
src/gadgets/: basic.rs  groth16.rs  mod.rs
src/gadgets/bigint/: add.rs  cmp.rs  mod.rs  mul.rs
src/gadgets/bn254/: final_exponentiation.rs  fp254impl.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  g1.rs  g2.rs  mod.rs  pairing.rs  test_macros.rs
src/hashers/: aes_ni.rs  mod.rs  sha256.rs
src/soldering/: mod.rs
tests/: fq12_mul_e2e.rs  garbler_evaluator_connection.rs  multigarble_equivalence.rs  multigarble_gadgets_equivalence.rs  streaming_evaluate.rs
