[package]
name = "garbled-snark-verifier"
version = "0.2.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
bitvec = "1.0.1"
blake3 = { version = "1.6.1", features = ["traits-preview"] }
circuit_component_macro = { path = "circuit_component_macro" }
digest = "0.10"
log = "0.4.27"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8" # using old version for consistency with ark
rand_chacha = "0.3" # using old version for consistency with ark
rayon = "1.10.0"
slotmap = "1.0"
thiserror = "2.0.12"

[dev-dependencies]
ark-ec = "0.5.0"
sha2 = "0.10"
test-log = "0.2.8"
trybuild = "1.0"

# Install Git hooks via cargo-husky
[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
