[package]
name = "soldering-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.9"
sp1-sdk = "5.2.2"
rkyv = "0.8"
rand = "0.9"
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }
tracing = "0.1"

[dev-dependencies]
itertools = "*"

[build-dependencies]
sp1-build = "5.2.2"
