[package]
name = "soldering-zk-circuit"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5.0"
ark-ff = { version = "0.5.0", features = ["parallel"] }
ark-groth16 = { version = "0.5.0", features = ["parallel"] }
ark-relations = "0.5.1"
ark-serialize = "0.5.0"
ark-std = { version = "0.5.0", features = ["parallel"] }
ark-snark = "0.5.1"
ark-crypto-primitives = { version = "0.5.0", default-features = false, features = ["std", "crh", "r1cs", "parallel"] }
ark-r1cs-std = { version = "0.5.0", features = ["parallel"] }
thiserror = "2.0.12"
rayon = "1.10"
