[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
sp1-zkvm = "5.2.2"
fibonacci-lib = { path = "../lib" }
soldering-types = { path = "../types" }
sha2 = "0.10.9"

[patch.crates-io]
sha2-v0-10-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-4.0.0" }
